# ai-weekly

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: weekly-report.yml
examples/: quickstart.md  sample_output.md
src/ai_weekly/: __init__.py  __main__.py  ai_generator.py  cli.py  formatters.py  git_reader.py  github_context.py  renderer.py  web.py
src/ai_weekly.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_weekly/static/: preview.html
src/ai_weekly/templates/: brief.md.j2  default.md.j2  detailed.md.j2
tests/: test_git_reader.py
