[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-weekly"
version = "0.1.0"
description = "AI-powered weekly work report generator from Git history."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ai-weekly contributors" }]
keywords = ["ai", "weekly-report", "git", "automation", "productivity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "click>=8.0",
  "rich>=13.0",
  "httpx>=0.25",
  "jinja2>=3.1",
  "gitpython>=3.1",
]

[project.scripts]
ai-weekly = "ai_weekly.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
